# tictactoe

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  test_ollama.py
.github/workflows/: azure-static-web-apps-zealous-stone-0b1da0103.yml
Back/: api.py  game_logic.py
Front/: index.css  index.html  index.js
Model/: model.py
